include/affineui/c_api_app.h

typedef struct affineui_document affineui_document;
typedef struct affineui_view     affineui_view;
typedef struct affineui_widget   affineui_widget;
typedef void (*affineui_click_fn) (void* user);
typedef void (*affineui_change_fn)(void* user, const char* value);
typedef void (*affineui_build_fn) (void* user, affineui_view* view);
typedef enum affineui_dock {
    AFFINEUI_DOCK_LEFT   = 0,
    AFFINEUI_DOCK_RIGHT  = 1,
    AFFINEUI_DOCK_TOP    = 2,
    AFFINEUI_DOCK_BOTTOM = 3,
    AFFINEUI_DOCK_TAB    = 4   
}
typedef enum affineui_dock_state {
    AFFINEUI_DOCK_DOCKED   = 0,
    AFFINEUI_DOCK_DETACHED = 1,  
    AFFINEUI_DOCK_TEAROFF  = 2
} affineui_dock_state;
typedef enum affineui_dock_corner {
    AFFINEUI_DOCK_CORNER_TOP_LEFT     = 0,
    AFFINEUI_DOCK_CORNER_TOP_RIGHT    = 1,
    AFFINEUI_DOCK_CORNER_BOTTOM_LEFT  = 2,
    AFFINEUI_DOCK_CORNER_BOTTOM_RIGHT = 3
} affineui_dock_corner;
typedef struct affineui_dock_location {
    int                  has_side;
    affineui_dock        side;
    const char*          parent;
    affineui_dock_state  state;
    int                  has_size;
    int                  size;                
    int                  has_anchor;
    affineui_dock_corner anchor;              
    int                  has_offset;
    int                  offset_x, offset_y;  
    int                  has_float_size;
    int                  float_w, float_h;    
    const char*          drag_with;
} affineui_dock_location;
AFFINEUI_C_API void affineui_dock_location_init(affineui_dock_location* loc);
AFFINEUI_C_API affineui_widget* affineui_view_document_view(affineui_view* view,
                                                            const char* key,
                                                            affineui_build_fn build,
                                                            void* user);
AFFINEUI_C_API char* affineui_view_document(affineui_view* view,
                                            affineui_build_fn content,
                                            void* user,
                                            affineui_user_free_fn user_free,
                                            const char* title,
                                            const char* icon);
AFFINEUI_C_API char* affineui_view_dockpanel(affineui_view* view,
                                             const char* title,
                                             const affineui_dock_location* where,
                                             affineui_build_fn content,
                                             void* user,
                                             affineui_user_free_fn user_free,
                                             const char* icon,
                                             const char* key);
AFFINEUI_C_API void affineui_view_dock_toolbar(affineui_view* view,
                                               const char* pane_id,
                                               affineui_build_fn build,
                                               void* user,
                                               affineui_user_free_fn user_free);
typedef int (*affineui_dock_size_fn)(void* user, const char* pane_id);
typedef const char* (*affineui_dock_active_tab_fn)(void* user, const char* pane_id);
typedef struct affineui_dock_placement {
    int         present;    
    int         floating;   
    const char* parent;     
    int         side;       
    int         size;       
    int         x, y, w, h; 
} affineui_dock_placement;
typedef void (*affineui_dock_placement_fn)(void* user, const char* panel_id,
                                           affineui_dock_placement* out);
AFFINEUI_C_API void affineui_view_set_dock_size_provider(
    affineui_view* view, affineui_dock_size_fn fn, void* user,
    affineui_user_free_fn user_free);
AFFINEUI_C_API void affineui_view_set_dock_active_tab_provider(
    affineui_view* view, affineui_dock_active_tab_fn fn, void* user,
    affineui_user_free_fn user_free);
AFFINEUI_C_API void affineui_view_set_dock_placement_provider(
    affineui_view* view, affineui_dock_placement_fn fn, void* user,
    affineui_user_free_fn user_free);
AFFINEUI_C_API void affineui_view_set_dock_layout_from_document(
    affineui_view* view, affineui_document* doc);
AFFINEUI_C_API void affineui_document_dock_override(const affineui_document* doc,
                                                    const char* panel_id,
                                                    affineui_dock_placement* out);
AFFINEUI_C_API char* affineui_document_dock_active_tab(const affineui_document* doc,
                                                       const char* pane_id);
AFFINEUI_C_API int affineui_document_take_dock_structure_changed(affineui_document* doc);
AFFINEUI_C_API void affineui_document_reset_dock_state(affineui_document* doc);
AFFINEUI_C_API size_t affineui_document_dock_override_count(
    const affineui_document* doc);
AFFINEUI_C_API int affineui_document_dock_override_at(
    const affineui_document* doc, size_t index,
    char** out_panel_id, affineui_dock_placement* out);
AFFINEUI_C_API affineui_widget* affineui_view_toolbar_separator(affineui_view* view,
                                                                const char* key);
AFFINEUI_C_API affineui_widget* affineui_view_icon_button(affineui_view* view,
                                                          const char* icon,
                                                          const char* key);
AFFINEUI_C_API affineui_widget* affineui_view_menu_button(affineui_view* view,
                                                          const char* label,
                                                          affineui_build_fn build,
                                                          void* user,
                                                          const char* key);
AFFINEUI_C_API affineui_widget* affineui_view_menu_item(affineui_view* view,
                                                        const char* label,
                                                        const char* icon,
                                                        const char* shortcut,
                                                        const char* key);
AFFINEUI_C_API affineui_widget* affineui_view_menu_separator(affineui_view* view,
                                                             const char* key);
AFFINEUI_C_API affineui_widget* affineui_view_submenu(affineui_view* view,
                                                      const char* label,
                                                      affineui_build_fn build,
                                                      void* user,
                                                      const char* icon,
                                                      const char* key);
AFFINEUI_C_API affineui_widget* affineui_view_menu_brand(affineui_view* view,
                                                         const char* title,
                                                         const char* icon,
                                                         const char* key);
AFFINEUI_C_API affineui_widget* affineui_view_menu_spacer(affineui_view* view,
                                                          const char* key);
AFFINEUI_C_API affineui_widget* affineui_view_document_title(affineui_view* view,
                                                             const char* text,
                                                             const char* key);
AFFINEUI_C_API affineui_widget* affineui_view_menu_meta(affineui_view* view,
                                                        const char* text,
                                                        const char* key);
AFFINEUI_C_API affineui_widget* affineui_view_tree_row(affineui_view* view,
                                                       const char* label,
                                                       int selected,
                                                       int depth,
                                                       const char* key);
AFFINEUI_C_API affineui_widget* affineui_view_splitter(affineui_view* view,
                                                       int horizontal,
                                                       const char* key);
AFFINEUI_C_API affineui_widget* affineui_view_find_widget(affineui_view* view,
                                                          const char* name);
AFFINEUI_C_API void affineui_widget_destroy(affineui_widget* w);
AFFINEUI_C_API int  affineui_widget_valid(const affineui_widget* w);
AFFINEUI_C_API int  affineui_widget_get_kind(const affineui_widget* w);
AFFINEUI_C_API char* affineui_widget_name(const affineui_widget* w);
AFFINEUI_C_API char* affineui_widget_attr(const affineui_widget* w,
                                          const char* name,
                                          const char* fallback);
AFFINEUI_C_API char* affineui_widget_text(const affineui_widget* w);
AFFINEUI_C_API int   affineui_widget_has_attr(const affineui_widget* w, const char* name);
AFFINEUI_C_API void affineui_widget_set_text(affineui_widget* w, const char* text);
AFFINEUI_C_API void affineui_widget_set_attr(affineui_widget* w,
                                             const char* name, const char* value);
AFFINEUI_C_API void affineui_widget_remove_attr(affineui_widget* w, const char* name);
AFFINEUI_C_API void affineui_widget_set_selector(affineui_widget* w,
                                                 const char* name, const char* value);
AFFINEUI_C_API void affineui_widget_add_class(affineui_widget* w, const char* classes);
AFFINEUI_C_API void affineui_widget_clear(affineui_widget* w);
AFFINEUI_C_API void affineui_widget_on_click(affineui_widget* w,
                                             affineui_click_fn fn,
                                             void* user,
                                             affineui_user_free_fn user_free);
AFFINEUI_C_API void affineui_widget_on_change(affineui_widget* w,
                                              affineui_change_fn fn,
                                              void* user,
                                              affineui_user_free_fn user_free);
AFFINEUI_C_API void affineui_widget_append(affineui_widget* w,
                                           affineui_build_fn build, void* user);
AFFINEUI_C_API void affineui_widget_replace(affineui_widget* w,
                                            affineui_build_fn build, void* user);
AFFINEUI_C_API affineui_widget* affineui_widget_find_widget(const affineui_widget* w,
                                                            const char* name);