include/affineui/c_api.h


AFFINEUI_C_API void affineui_string_free(char* s);