bindings/csharp/AffineUI/NativeMethods.cs


    [LibraryImport(Lib)]
    internal static partial void affineui_dock_location_init(ref affineui_dock_location loc);

    [LibraryImport(Lib, StringMarshalling = StringMarshalling.Utf8)]
    internal static partial IntPtr affineui_view_document_view(IntPtr view, string? key, IntPtr build, IntPtr user);

    /// <summary>DEFERRED — returns the pane id; free with affineui_string_free.</summary>
    [LibraryImport(Lib, StringMarshalling = StringMarshalling.Utf8)]
    internal static partial IntPtr affineui_view_document(
        IntPtr view, IntPtr content, IntPtr user, IntPtr userFree, string? title, string? icon);

    /// <summary>DEFERRED — returns the panel id; free with affineui_string_free.</summary>
    [LibraryImport(Lib, StringMarshalling = StringMarshalling.Utf8)]
    internal static partial IntPtr affineui_view_dockpanel(
        IntPtr view, string? title, ref affineui_dock_location where,
        IntPtr content, IntPtr user, IntPtr userFree, string? icon, string? key);

    /// <summary>DEFERRED.</summary>
    [LibraryImport(Lib, StringMarshalling = StringMarshalling.Utf8)]
    internal static partial void affineui_view_dock_toolbar(
        IntPtr view, string? paneId, IntPtr build, IntPtr user, IntPtr userFree);

    [LibraryImport(Lib)]
    internal static partial void affineui_view_set_dock_size_provider(
        IntPtr view, IntPtr fn, IntPtr user, IntPtr userFree);

    [LibraryImport(Lib)]
    internal static partial void affineui_view_set_dock_active_tab_provider(
        IntPtr view, IntPtr fn, IntPtr user, IntPtr userFree);

    [LibraryImport(Lib)]
    internal static partial void affineui_view_set_dock_placement_provider(
        IntPtr view, IntPtr fn, IntPtr user, IntPtr userFree);

    [LibraryImport(Lib)]
    internal static partial void affineui_view_set_dock_layout_from_document(IntPtr view, IntPtr doc);

    [LibraryImport(Lib, StringMarshalling = StringMarshalling.Utf8)]
    internal static partial void affineui_document_dock_override(
        IntPtr doc, string? panelId, out affineui_dock_placement outPlacement);

    [LibraryImport(Lib, StringMarshalling = StringMarshalling.Utf8)]
    internal static partial IntPtr affineui_document_dock_active_tab(IntPtr doc, string? paneId);

    [LibraryImport(Lib)]
    internal static partial int affineui_document_take_dock_structure_changed(IntPtr doc);

    [LibraryImport(Lib)]
    internal static partial void affineui_document_reset_dock_state(IntPtr doc);

    [LibraryImport(Lib)]
    internal static partial nuint affineui_document_dock_override_count(IntPtr doc);

    [LibraryImport(Lib)]
    internal static partial int affineui_document_dock_override_at(
        IntPtr doc, nuint index, out IntPtr outPanelId, out affineui_dock_placement outPlacement);

    [LibraryImport(Lib, StringMarshalling = StringMarshalling.Utf8)]
    internal static partial IntPtr affineui_view_toolbar_separator(IntPtr view, string? key);

    [LibraryImport(Lib, StringMarshalling = StringMarshalling.Utf8)]
    internal static partial IntPtr affineui_view_icon_button(IntPtr view, string? icon, string? key);

    [LibraryImport(Lib, StringMarshalling = StringMarshalling.Utf8)]
    internal static partial IntPtr affineui_view_menu_button(IntPtr view, string? label, IntPtr build, IntPtr user, string? key);

    [LibraryImport(Lib, StringMarshalling = StringMarshalling.Utf8)]
    internal static partial IntPtr affineui_view_menu_item(IntPtr view, string? label, string? icon, string? shortcut, string? key);

    [LibraryImport(Lib, StringMarshalling = StringMarshalling.Utf8)]
    internal static partial IntPtr affineui_view_menu_separator(IntPtr view, string? key);

    [LibraryImport(Lib, StringMarshalling = StringMarshalling.Utf8)]
    internal static partial IntPtr affineui_view_submenu(IntPtr view, string? label, IntPtr build, IntPtr user, string? icon, string? key);

    [LibraryImport(Lib, StringMarshalling = StringMarshalling.Utf8)]
    internal static partial IntPtr affineui_view_menu_brand(IntPtr view, string? title, string? icon, string? key);

    [LibraryImport(Lib, StringMarshalling = StringMarshalling.Utf8)]
    internal static partial IntPtr affineui_view_menu_spacer(IntPtr view, string? key);

    /// <summary>The document being edited, centered in the bar — what a title
    /// bar shows.</summary>
    [LibraryImport(Lib, StringMarshalling = StringMarshalling.Utf8)]
    internal static partial IntPtr affineui_view_document_title(IntPtr view, string? text, string? key);

    [LibraryImport(Lib, StringMarshalling = StringMarshalling.Utf8)]
    internal static partial IntPtr affineui_view_menu_meta(IntPtr view, string? text, string? key);

    [LibraryImport(Lib, StringMarshalling = StringMarshalling.Utf8)]
    internal static partial IntPtr affineui_view_tree_row(IntPtr view, string? label, int selected, int depth, string? key);

    [LibraryImport(Lib, StringMarshalling = StringMarshalling.Utf8)]
    internal static partial IntPtr affineui_view_splitter(IntPtr view, int horizontal, string? key);

    [LibraryImport(Lib, StringMarshalling = StringMarshalling.Utf8)]
    internal static partial IntPtr affineui_view_find_widget(IntPtr view, string? name);

    // ── c_api_app.h — Widget ─────────────────────────────────────────────

    [LibraryImport(Lib)]
    internal static partial void affineui_widget_destroy(IntPtr w);

    [LibraryImport(Lib)]
    internal static partial int affineui_widget_valid(IntPtr w);

    [LibraryImport(Lib)]
    internal static partial int affineui_widget_get_kind(IntPtr w);

    [LibraryImport(Lib)]
    internal static partial IntPtr affineui_widget_name(IntPtr w);

    [LibraryImport(Lib, StringMarshalling = StringMarshalling.Utf8)]
    internal static partial IntPtr affineui_widget_attr(IntPtr w, string? name, string? fallback);

    [LibraryImport(Lib)]
    internal static partial IntPtr affineui_widget_text(IntPtr w);

    [LibraryImport(Lib, StringMarshalling = StringMarshalling.Utf8)]
    internal static partial int affineui_widget_has_attr(IntPtr w, string? name);

    [LibraryImport(Lib, StringMarshalling = StringMarshalling.Utf8)]
    internal static partial void affineui_widget_set_text(IntPtr w, string? text);

    [LibraryImport(Lib, StringMarshalling = StringMarshalling.Utf8)]
    internal static partial void affineui_widget_set_attr(IntPtr w, string? name, string? value);

    [LibraryImport(Lib, StringMarshalling = StringMarshalling.Utf8)]
    internal static partial void affineui_widget_remove_attr(IntPtr w, string? name);

    [LibraryImport(Lib, StringMarshalling = StringMarshalling.Utf8)]
    internal static partial void affineui_widget_set_selector(IntPtr w, string? name, string? value);

    [LibraryImport(Lib, StringMarshalling = StringMarshalling.Utf8)]
    internal static partial void affineui_widget_add_class(IntPtr w, string? classes);

    [LibraryImport(Lib)]
    internal static partial void affineui_widget_clear(IntPtr w);

    [LibraryImport(Lib)]
    internal static partial void affineui_widget_on_click(IntPtr w, IntPtr fn, IntPtr user, IntPtr userFree);

    [LibraryImport(Lib)]
    internal static partial void affineui_widget_on_change(IntPtr w, IntPtr fn, IntPtr user, IntPtr userFree);

    [LibraryImport(Lib)]
    internal static partial void affineui_widget_append(IntPtr w, IntPtr build, IntPtr user);

    [LibraryImport(Lib)]
    internal static partial void affineui_widget_replace(IntPtr w, IntPtr build, IntPtr user);

    [LibraryImport(Lib, StringMarshalling = StringMarshalling.Utf8)]
    internal static partial IntPtr affineui_widget_find_widget(IntPtr w, string? name);
}
